2001-02-15  Dan Mueth   <dan@eazel.com>

        * omf-install/Makefile.am: Changed to install under
          $(datadir)/omf/ instead of $(prefix)/doc/omf because
          this is The Right Way, and scrollkeeper was recently fixed
          to work this way.

2001-02-14  Christophe Merlet  <redfox@eikonex.org>

	* */*.desktop: Updated French translations.

2001-02-13  Dan Mueth   <dan@eazel.com>

	* core-docs/lgpl/C/lgpl.sgml: Added a </para> to make it
	  validate with nsgmls and produce a valid TOC.  Now it has
	  an extra <para> somewhere, which is lame, but at least
	  it validates and makes a good TOC. Finding the extra
	  <para> and removing it is left as an excercise for the reader.

	* applet-docs.make: Less broken OMF bits than before

2001-02-13  Dan Mueth   <dan@eazel.com>

	* app-docs.make: Fixed(TM)
	* applet-docs.make: Fixed(TM)

2001-02-13  Dan Mueth   <dan@eazel.com>

	* applet-docs.make: fixing previous non-fix
	* app-docs.make: fixing previous non-fix

2001-02-13  Dan Mueth   <dan@eazel.com>

	* OMF files: Updated to new category list in scrollkeeper-0.0.6

2001-02-12  Dan Mueth   <dan@eazel.com>

	* applet-docs.make: Fixed to do directories without OMF files
	  correctly.

2001-02-12  Dan Mueth   <dan@eazel.com>

	* app-docs.make: Fixed to do directories without OMF files
	  correctly.

2001-02-08  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added Norwegian (nynorsk) to ALL_LINGUAS.
	
2001-02-06  Dan Mueth   <dan@eazel.com>

	* Commented out the OMF files for 3 translations of gnome-terminal
	  because the SGML is broken, preventing TOC extraction

2001-02-06  Dan Mueth   <dan@eazel.com>

	* Modified Makefile.am's to register the new OMF files
	* Added many OMF files:
		applets/desk-guide/help/C/desk-guide_applet-C.omf
		applets/desk-guide/help/de/desk-guide_applet-de.omf
		applets/fish/help/C/fish_applet-C.omf
		applets/fish/help/da/fish_applet-da.omf
		applets/fish/help/no/fish_applet-no.omf