@@ -1,3 +1,8 @@
+Sat Feb 17 23:28:01 2001  George Lebl <jirka@5z.com>
+
+	* gnome-core.spec.in:  update so that /var/lib files are installed
+	  properly
+
 2001-02-15  Dan Mueth   <dan@eazel.com>
 
         * omf-install/Makefile.am: Changed to install under
